fix line spacing

--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@
 .address {
     border-bottom: 3px red solid;
     width: 80%;
-    margin: 8px;
+    margin: 2vw;
 }
 
 #mapId {
